# curio-buildtracker

./: .gitignore  Cargo.toml  README.md
cdk/: app.py  cdk.json  requirements.txt
cdk/infrastructure/: api_gateway.py  build_manager.py  construct.py  frontend.py  stack.py  websocket.py
crates/curio-buildtracker/: Cargo.toml  config.json
crates/curio-buildtracker/src/: file_manager.rs  main.rs
crates/curio-buildtracker/src/primitives/: aggregate.rs  csv.rs  io.rs  mod.rs  tests.rs  transform.rs
crates/curio-db/: Cargo.toml
crates/curio-db/src/: config.rs  dependency_graph.rs  lib.rs  storage.rs
crates/curio-db/tests/: config_tests.rs  dependency_graph_tests.rs  integration_test.rs  storage_tests.rs
crates/curio-processor/: Cargo.toml  Dockerfile
crates/curio-processor/src/: main.rs
crates/curio-renderer/: Cargo.toml
crates/curio-renderer/src/: main.rs
docs/: autoscaling.md  configuration_design.md  frontend.md  operations.md  primitives.md
examples/config/: curio.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  amplify-config.js
frontend/src/components/: JsonRenderer.jsx  Layout.jsx
frontend/src/pages/: Dashboard.jsx  Inputs.jsx  Unauthorized.jsx
scripts/: install_dynamodb_local.sh  run_dynamodb_local.sh  run_full_tests.sh  run_s3_local.sh  update_frontend_config.py
