[package]
name = "curio-db"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
chrono = "0.4"
async-stream = "0.3"
regex = "1"
serde_yaml = "0.9"
aws-smithy-types = "1"
