[package]
name = "curio-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-sdk-sqs = "1"
aws-config = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
futures = "0.3"
tokio-stream = "0.1"
sysinfo = "0.30"
anyhow = "1"
